discussion/kv_engine/183119/183119_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54666: Introduce the change_streams DCP_CONTROL key

- DCP Producer disables CDC by default
- DCP Producer accepts the new key and enables CDC accordingly on the
  connection. Generic DCP Clients covered by that.
- DCP Consumer tries to enable CDC by default. 7.2.0 Consumers always
  send the new control key to the Producer for enabling CDC on replica
  DCP connections.
- DCP Consumer is resilient to pre-7.2.0 nodes. In case of non-success
  at DCP_CONTROL (as returned by legacy Producers that don't know about
  change_streams) CDC is set disabled at Consumer.

Notes:
- The CDC setup is a blocking step. The Consumer won't start operating
  until the setup is complete.
- Consumer needs to know about CDC enabled/disabled on the connection
  for enforing the proper validation on snapshots received.

Change-Id: Ief90aec0ee7beaa1dea4db2e110cf56eff47273e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-11-25 13:53:30.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-11-25 13:53:40.000000000
Message: 
Patch Set 4: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/326440/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-25 15:12:41.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/580/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/dcp-types.cc:14:12: error: no type named "string" in namespace "std" [clang-diagnostic-error]
const std::string DcpControlKeys::ChangeStreams = "change_stream";
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/dcp-types.h:161:23: error: no type named "string" in namespace "std" [clang-diagnostic-error]
    static const std::string ChangeStreams;
                      ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/580/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/dcp-types.cc:14:12:
error: no type named "string" in namespace "std" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/580/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/557/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/dcp/dcp-types.h:161:23:
error: no type named "string" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/557/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/738/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [48/93]: test chk manager rollback...(82 ms) OK


99% tests passed, 1 tests failed out of 426

Total Test time (real) = 347.44 sec

The following tests FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/738/ )

Timeout of a CTest test 426/426 Test #291: ep_testsuite_dcp.value_eviction.comp_passive ..................................................................................} ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/738/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/572/ : FAILURE

Compile error at [2022-11-25T14:36:53.361Z] ../kv_engine/engines/ep/src/dcp/dcp-types.h:161:23:
error: no type named "string" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/572/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/836/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_full_eviction
[2022-11-25T14:24:12.896Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1287: Failure
[2022-11-25T14:24:12.896Z] Expected: (activeRR) < (100), actual: 100 vs 100
[2022-11-25T14:24:12.896Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_full_eviction, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=full_eviction" (7122 ms)
EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_full_eviction
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/836/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21416/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/589/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/599/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/599/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/589/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/580/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
